--- a/1.md
+++ b/1.md
@@ -1,2 +1,85 @@
-# Capítulo 1
+# Chapter 1
 
+## 1.1 	DEFINE VARIABLE SCOPE
+
+### Local variables
+
+* Local variables dies at the end of the closing;
+* Method's params are binded to the method scope;
+* Try to use local variables or method params variables outside of its scope -> Compilation Error;
+
+### Instance variables
+
+* Object variables, fields, can be accessed as long as the object instance exists;
+
+### Static variables
+
+* Are shared between all classes' instances;
+* Defined by the modifier `static`. Ex: `static int count = 15`;
+* Can be accessed through class reference or class instance;
+
+
+### Same name variables
+
+* On the same scope, 2 variables can't be declared with the same name -> Compilation error;
+* *Shadowing* - variables with same name but diferent scopes;
+* Smaller to bigger scope;
+
+### Exercises
+
+* 1 - a;
+* 2 - a;
+* 3 - c;
+* 4 - c;
+* 5 - d;
+
+## 1.2 DEFINE JAVA CLASS STRUCTURE
+
+### Packages
+
+* If package not declared the class is on `default package`;
+* Package must be the first thing declare on the class;
+
+### Classes
+
+* Constructor may not be public;
+
+### Variables
+
+* Declaration: `type` + `name`;
+* Instance variables -> has a copy for each object;
+* Shared value for all instances of the class -> static variable;
+
+### Methods
+
+* Method signature -> name + params;
+* Methods can be `static`;
+
+### Constructors
+
+* Constructor doesn't have return and has the same name as the class;
+
+### Interfaces
+
+* Methods should be declares without implementation;
+* Constants can be declared on interfaces;
+
+### Multiples structures for an archive
+
+* Achive can have more than one class/interface;
+* Can be defined in any order;
+* If there is a public class/interface the archive **MUST** have the same name;
+* There should be at most one public class/interface;
+* If there isn't any public class/interface the archive can have any name;
+
+### Exercises
+
+* 1 - a;
+* 2 - e;
+* 3 - c;
+
+
+
+
+
+### STOP PAGE - 33
