Correções das correções

--- a/1.md
+++ b/1.md
@@ -6,24 +6,24 @@
 
 * Local variables dies at the end of the closing;
 * Method's params are binded to the method scope;
-* Try to use local variables or method params variables outside of its scope -> Compilation Error;
+* Trying to use local variables or method params variables outside of its scope -> Compilation Error;
 
 ### Instance variables
 
-* Object variables, fields, can be accessed as long as the object instance exists;
+* Object variables/fields can be accessed as long as the object instance exists;
 
 ### Static variables
 
-* Are shared between all classes' instances;
+* Shared between every instance of the class;
 * Defined by the modifier `static`. Ex: `static int count = 15`;
 * Can be accessed through class reference or class instance;
 
 
 ### Same name variables
 
-* On the same scope, 2 variables can't be declared with the same name -> Compilation error;
+* Multiple variables can't be declared with the same name at the same scope -> Compilation error;
 * *Shadowing* - variables with same name but diferent scopes;
-* Smaller to bigger scope;
+* Variables are accessed from smaller(closest scopes) to bigger scopes;
 
 ### Exercises
 
@@ -37,18 +37,18 @@
 
 ### Packages
 
-* If package not declared the class is on `default package`;
-* Package must be the first thing declare on the class;
+* When a package is not declared, it's automatically set to `default package`;
+* A Package must be the first thing declared on the class, followed by imports;
 
 ### Classes
 
-* Constructor may not be public;
+* A Constructor may not be public, if so, it can only be accessed from within the Class;
 
 ### Variables
 
-* Declaration: `type` + `name`;
-* Instance variables -> has a copy for each object;
-* Shared value for all instances of the class -> static variable;
+* Declaration: `type` then `name`;
+* Instance variables -> variables with exclusive value for each object instanciated;
+* Static variableShared -> variables with value shared between every instance of the class;
 
 ### Methods
 
@@ -57,20 +57,21 @@
 
 ### Constructors
 
-* Constructor doesn't have return and has the same name as the class;
+* Constructors doesn't return anything, and must be named the same as its class;
 
 ### Interfaces
 
-* Methods should be declares without implementation;
+* Methods should be declared without implementation;
+* methods with the `default modifier` must be implemented, though. 
 * Constants can be declared on interfaces;
 
 ### Multiples structures for an archive
 
-* Achive can have more than one class/interface;
-* Can be defined in any order;
+* An archive can have more than one class/interface;
+* classes and interfaces can be placed in any order;
 * If there is a public class/interface the archive **MUST** have the same name;
 * There should be at most one public class/interface;
-* If there isn't any public class/interface the archive can have any name;
+* If there isn't any public class/interface, the archive name may vary;
 
 ### Exercises
 
