Anotações e Práticas, dia 2

--- a/1.md
+++ b/1.md
@@ -79,8 +79,66 @@
 * 2 - e;
 * 3 - c;
 
+## 1.3 EXECUTABLE APPLICATIONS AND COMMAND-LINE
+
+### Main Method
+
+* Executable classes must have a `main` method 
+* `main` method must have public and static modifiers in any order
+* `main` must return void 
+
+### Commandline
+
+* passing parameters through command line: `java myClassName arg1 arg2...`
+
+### Compiling and Executing 
+
+* `javac` command generates bytecode
+* `java`command invokes the virtual machine to execute a java program
+* `jar -cf name.jar packagename` to create the jar file
+* `java -cp name.jar packagename.classname` to run jar file
+* Add `Main-Class: package.classname`  to `META-INF/MANIFEST.MF` to point main method to a jar file
+* `jar -cfm bib.jar mymanifest package` to send a custom manifest to a jar file
+
+### Exercises 
+* 1 - a;
+* 2 - d 
+* 3 - c
+* 4 - fffff
+* 5 - h
+
+## 1.4 Importing Packages 
+
+* *Full Qualified Name*: package name followed by class name 
+* Classes, by default, can only be acessed from their own package
+* Classes with the `public` modifier can be accessed by other packages
+* packages, then imports, then class definition. 
+* reserved word `import` followed by FQN
+* FQN must be used when importing classes with the same name from different packages 
+* specific imports have priority over generic imports
+* Classes in the default package can only be imported from the default package
+* Package names, by convention, should be lowercase. (site.company.project.etc)
+* `import static` imports static methods and variables from a class
+* We must access packages directly, there are no subpackages. 
+
+### Exercises 
+* 1 - a
+* 2 - a
+* 3 - c
+* 4 - c
+* 5 - e
+* 6 - d
+* 7 - b
+* 8 - a 
+* 9 - a
 
 
 
 
-### STOP PAGE - 33
+
+
+
+
+
+
+### STOP PAGE - 60
