--- a/2.md
+++ b/2.md
@@ -1,2 +1,84 @@
-# Chapter 2
+# Chapter 2 Working with Java types
 
+## 2.1 DECLARING AND INITIALIZING VARIABLES
+
+* Declaration **MUST** be `type` followed by `name`. Ex: `int age`;
+* Initialization, inside methods, is a **MUST** if you want to use the variable;
+* Use variable that was not initialized -> compilation error;
+* Class variables are *implicit initialized* with default value when the class is instanciated;
+* Array creation too do *implicit initialization*;
+* Default values:
+    * Integer numbers: **0**
+    * Float numbers: **0.0**
+    * Boolean: **false**
+    * Char: **empty**
+    * References: **null**
+
+### Primitive types
+
+* All primitive types are already defined. Can't create new primitives types;
+* `char` is `int`;
+* Integer variables size:
+    * byte ─ 1 byte (8 bits, de -128 a 127);
+	* short	─ 2 bytes (16 bits, de –32.768 a 32.767);
+	* char ─ 2 bytes (**só positivo**), (16	bits, de 0 a 65.535);
+	* int ─	4 bytes	(32	bits, de –2.147.483.648	a 2.147.483.647);
+	* long ─ 8 bytes (64 bits, de – 9.223.372.036.854.775.808 a 9.223.372.036.854.775.807);
+* Floating variables size:
+    * float	─ 4	bytes (32 bits,	de +/–1.4 * 10 ^ 45 a +/– 3.4028235 * 10 ^ 38);
+	* double ─ 8 bytes (64 bits, de +/–4.9 * 10 ^ 324 a+/–1.7976931348623157 *	10 ^ 308);
+* FLoating types can be `+/- infinity`, `+/- 0`, `NaN`;
+
+### Literals
+
+* Values that are direct on source code;
+* All values bigger than `int` can be literals;
+* Non primitives values can't be literals;
+* Literal double value: `123123123123d`;
+* Literal long value: `123123123123L`;
+
+### Diferent bases
+
+* Java suports Octal, Hexadecimal and binary on literal declaration;
+* Octal **MUST** start with 0 followed by 0 to 7;
+* Hexadecimal **MUST** start with 0x/0X followed by 0 to 9/A to F;
+* Binary **MUST** start with 0b/0B followed by 0 or 1; 
+
+### Scientific notation
+
+* `double d = 3.1E2`;
+* `double d = 3.1e2`;
+
+### Underlines
+
+* `int a = 123_456_789`;
+* Can only be used between numbers;
+
+### Initializing chars
+
+* `char c = 'A'`;
+* `char c = 65`;
+* `char c = \u03A9` unicode;
+
+### Identifiers
+
+* Identifiers -> used by coder to identify methods, variables, classes...
+* Reserved words -> terms defined by the language, **NONE** has uppercase word;
+* Uncommon reserved words: `assert`, `goto`, `native`, `strictfp`, `synchronized`, `transient`, `volatile`; 
+* Identifiers: can use words, numbers, $ or _. First word **CANNOT** be a number. Is case sensitive;
+
+### Exercises
+
+1. d
+2. a
+3. d
+4. f
+5. b
+6. b
+7. a
+8. c
+9. e
+10. d;
+
+
+pag79
