--- a/2.md
+++ b/2.md
@@ -82,3 +82,25 @@
 
 
 pag79
+
+## 2.2 OBJECT-REFERENCING VARIABLES AND PRIMITIVE TYPES
+
+### PRIMITIVES vs OBJECTS 
+
+* Primitive variables store values, not references
+* Objects store references, if object a = b and b.var = 5. a.var is 5
+
+### REFERENCES 
+
+* Two references are only equal if they both point to a single object
+
+## 2.3 READ/WRITE OBJECT FIELDS
+
+### When inside a class, no operator is necessary for accessing fields
+### keyword `this` works as a reference to the object itself where code is running
+
+## 2.4
+
+
+---
+
