--- a/2.md
+++ b/2.md
@@ -87,20 +87,26 @@ pag79
 
 ### PRIMITIVES vs OBJECTS 
 
-* Primitive variables store values, not references
-* Objects store references, if object a = b and b.var = 5. a.var is 5
+* Primitive store values;
+* Objects store references;
+* if object a = b and b.var = 5. a.var is 5 as well;
 
 ### REFERENCES 
 
-* Two references are only equal if they both point to a single object
+* Two references are only equal if they `both` point to a single object;
 
 ## 2.3 READ/WRITE OBJECT FIELDS
 
-### When inside a class, no operator is necessary for accessing fields
-### keyword `this` works as a reference to the object itself where code is running
+* When inside a class, no operator is necessary for accessing fields;
+* keyword `this` works as a reference to the object itself;
 
 ## 2.4
 
 
----
+***Todo***
+1. Exercises from 2.2
+2. Exercies from 2.3
+3. Finish 2.4 Readings
+4. ...
 
+#### Page 84
