Finalized chapter 2 review.

--- a/2.md
+++ b/2.md
@@ -93,20 +93,106 @@ pag79
 
 ### REFERENCES 
 
-* Two references are only equal if they `both` point to a single object;
+* Two references are only equal if they `both` point to the same object;
 
 ## 2.3 READ/WRITE OBJECT FIELDS
 
+* To access an object's atribute we use `.` followed by the name of the referencing variable;
 * When inside a class, no operator is necessary for accessing fields;
 * keyword `this` works as a reference to the object itself;
 
-## 2.4
+## 2.4 EXPLAIN OBJECT LIFE CYCLE
 
+### Creation of objects
 
-***Todo***
-1. Exercises from 2.2
-2. Exercies from 2.3
-3. Finish 2.4 Readings
-4. ...
+* `new` creates a new, in memory, instance of an object;
+* A varaible is a simple reference to the object not the object itself;
 
-#### Page 84
+### Accessible objects
+
+* An object is accessible if you can *reach* it using a direct or indirect reference;
+* `Lists` are an example of indirect reference;
+
+### Unaccessible objects
+
+* If there is no direct or indirect reference to an object it means that that object is unaccessible;
+
+### Garbage Collector
+
+* Every unaccessible object is eligible to the *garbage collector*;
+
+#### Eligible objects x Collected objects
+
+* The *Garbage Collector* runs in background with you java application;
+* You **CAN'T** predict when it will be executed so you **CAN'T** tell for sure how much objects were effectively collected at a certain point;
+* We con only tell how much objected are eligible to be collected;
+
+### IMPORTANT - STRING LITERAL IS AN INSTANCIATED OBJECT
+
+## 2.5 CALL METHODS IN OBJECT
+
+* Methods signed with `void` does not have a return so can't be passed as parameter to another method or attributed to a variable;
+
+### Variables arguments: varargs
+
+* Since Java 5 `varargs` enables a method to recive a variable number of parameters. Ex: `int... nums`;
+* `varargs` **ALWAYS** is an array;
+* `varargs` **MUST** always be the last parameter of the method signature to avoid ambiguities which means that a method can only have, at most, **ONE** `varargs` on your signature;
+* You can pass an array to an `varargs` parameter but you can't pass an `varargs` to an array parameter;
+
+## 2.6 MANIPULAT DATA USING THE CLASS STRINGBUILDER AND IT'S METHODS;
+
+* To suport mutable `Strings` Java has the classes `StringBuilder` and `StringBuffer`;
+* `append` is the basic operation, it allows you to concatenate to the same object;
+* `append` doesn't return a new object but alter the object itself;
+* Usable constructors:
+    * `StringBuilder sb1 = new StringBuilder();` - empty;
+    * `StringBuilder sb2 = new StringBuilder("java");` - initial content;
+    * `StringBuilder sb3 = new StringBuilder(50);` - array's initial length to store a string;
+    * `StringBuilder sb4 = new StringBuilder(sb2);` - base on other object of the same type;
+* **CAUTION** by defining the array size we are not creating a defined `String` size;
+* `StringBuilder` and `StringBuffer` implements the same interface but only the first one is *thread-safe*;
+
+### StringBuilder and StringBuffer main methods
+
+* `append` has overloads to recive all the primitive types, `String`, char's arrays, other `StringBuffers` and etc, all of them returns the `StringBuffer/Builder` itself allowing to chained calls;
+* `append` has an overload that recives an `Object` and uses the `toString` method to append the value of the object;
+* `insert` to append a value to in any position, the first param is the index where we want to insert the value. Ex: `sb.insert(3, "some value")`;
+* `delete` recives the initial and final index. Ex: `sb.delete(1, 10)`;
+* To convert a `StringBuffer/Builder` into a `Stirng` simply call the `toString` method;
+* `reverse` inverts its content;
+* There is also the methods `trim`, `charAt`, `length`, `equals`, `indexOf`, `lastIndexOf` and `substring`;
+* **CAUTION** `substring` does not change the value of the object;
+
+## 2.7 CREATING AND MANIPULATING STRING
+
+* `"Java"` - implicit way to create an String. `new String("Java")` - explicit way;
+* You can also create a String from a array of chars or based on a `StringBuffer/Builder`;
+* **STRING ISN'T A PRIMITIVE TYPE**;
+* Concatanate `String` with `+`. If concatenate `null` to a `String` `null` is converted to `String`;
+* Java converts primitive types to `String` automatically;
+* Remember the operators precedence. `15 + 1 + " string"` = `"16 string"`;
+
+### String are imutable
+
+* Every method that seens to modify a `String` actually returns a new one;
+* `String`, on backgroud, has an array of `chars`;
+
+### String's main methods
+
+* `length` - `String` size;
+* `isEmpty` - `String` size equals 0;
+* Returns a new `String`:
+    * `toUpperCase()`;
+    * `toLowerCase()`;
+    * `trim()` - removes empty spaces of both ends;
+    * `substring(int beginIndex, int endIndex)` - Does not include the final position char but includes the initial position char;
+    * `substring(int beginIndex)`;
+    * `concat(String)`;
+    * `replace(char oldChar, char newChar)` - replaces all occurences of `oldChar` for `newChar`;
+    * `replace(CharSequence	 target, CharSequence replacement)`;
+* Comparation: 
+    * `boolean equals(Object)` - compare each char equality;
+    * `boolean equalsIgnoreCase(String)` - same as `equals` but ignores `char` case;
+    * `int compareTo(String)` - compare 2 `Strings` by lexicographic order;
+    * `int compareToIgnoreCase(String)` - same as `compareTo` but ignore `char` case;
