Exercises of chapter 2

--- a/2.md
+++ b/2.md
@@ -80,9 +80,6 @@
 9. e
 10. d;
 
-
-pag79
-
 ## 2.2 OBJECT-REFERENCING VARIABLES AND PRIMITIVE TYPES
 
 ### PRIMITIVES vs OBJECTS 
@@ -95,11 +92,20 @@ pag79
 
 * Two references are only equal if they `both` point to the same object;
 
+### Exercises
+
+1. e;
+2. f;
+
 ## 2.3 READ/WRITE OBJECT FIELDS
 
 * To access an object's atribute we use `.` followed by the name of the referencing variable;
 * When inside a class, no operator is necessary for accessing fields;
 * keyword `this` works as a reference to the object itself;
+
+### Exercises
+
+1. d;
 
 ## 2.4 EXPLAIN OBJECT LIFE CYCLE
 
@@ -129,6 +135,12 @@ pag79
 
 ### IMPORTANT - STRING LITERAL IS AN INSTANCIATED OBJECT
 
+### Exercises
+
+1. c;
+2. b;
+3. b;
+
 ## 2.5 CALL METHODS IN OBJECT
 
 * Methods signed with `void` does not have a return so can't be passed as parameter to another method or attributed to a variable;
@@ -139,6 +151,13 @@ pag79
 * `varargs` **ALWAYS** is an array;
 * `varargs` **MUST** always be the last parameter of the method signature to avoid ambiguities which means that a method can only have, at most, **ONE** `varargs` on your signature;
 * You can pass an array to an `varargs` parameter but you can't pass an `varargs` to an array parameter;
+
+### Exercises
+
+1. b;
+2. c;
+3. e;
+4. e;
 
 ## 2.6 MANIPULAT DATA USING THE CLASS STRINGBUILDER AND IT'S METHODS;
 
@@ -163,6 +182,11 @@ pag79
 * `reverse` inverts its content;
 * There is also the methods `trim`, `charAt`, `length`, `equals`, `indexOf`, `lastIndexOf` and `substring`;
 * **CAUTION** `substring` does not change the value of the object;
+
+### Exercises
+
+1. e;
+2. a;
 
 ## 2.7 CREATING AND MANIPULATING STRING
 
@@ -196,3 +220,22 @@ pag79
     * `boolean equalsIgnoreCase(String)` - same as `equals` but ignores `char` case;
     * `int compareTo(String)` - compare 2 `Strings` by lexicographic order;
     * `int compareToIgnoreCase(String)` - same as `compareTo` but ignore `char` case;
+
+### Exercises
+
+1. a;
+2. b;
+3. a;
+4. a;
+5. e;
+6. b;
+7. b;
+8. e;
+9. d;
+10. c;
+11. a;
+12. c;
+13. a;
+14. a;
+
+pag114
