--- a/3.md
+++ b/3.md
@@ -29,5 +29,58 @@
 * Numeric comparations ignores the value type;
 * References and `boolean` can only be compared with `==` or `!=`;
 * Can't compare incompatible types;
+* Operations with floating number are not always accurated;
 
-pag122
+### Logic Operators
+
+* And `&`, Or `|`, Exclusive Or `^`, Negation `!`;
+* Short circuit operators: `&&` and `||`;
+
+### Increment and Decrement operators
+
+* Pos Add 1 `i++`;
+* Pos Subtract 1 `i--`;
+* Pre Add 1 `++i`;
+* Pre Subtract 1 `--i`;
+* Attributions and operations:
+  * `i = i + 2` is the same as `i += 2`;
+  * `i = i - 2` is the same as `i -= 2`;
+  * `i = i * 2` is the same as `i *= 2`;
+  * `i = i / 2` is the same as `i /= 2`;
+  * `i = i % 2` is the same as `i %= 2`;
+  * On this cases the compilator allows you to do oparations with incompatible types. Ex: `byte b1 = 3; b1 += 4;`;
+
+### Ternary operator
+
+* `boolean condiction ? if_true : if_false`;
+* Should always return a value that can be used to an attribution;
+
+### Reference operators
+
+* `.`
+* Used to navegate on an object;
+
+### Strings concatenation
+
+* Can use the operator `+` to concatenate `String`;
+* `String` is the only class that accepts an operator besides `.`;
+* String concatenation with `+` is a syntax sugar, once the code is compiled it uses a `StringBuilder`;
+
+### Precedence
+
+* Order of execution:
+  1. pre increment/decrement
+  2. multiplications, divisions and mod;
+  3. subtraction addition;
+  4. shifts;
+  5. pos increment/decrement;
+
+### Casting of primitive types
+
+* `double d = 0; float f = (float) d`;
+* Casting with primitive types can result on precision lost;
+
+## 3.1 USE PARENTHESES TO OVERRIDE OPERATORS PRECEDENCES
+
+* `int a = 15 * 4 + 1; // 15 * 4 = 60, 60 + 1 = 61`;
+* `int b = 15 * (4 + 1); // 4 + 1 = 5, 15 * 5 = 75`;
