Small contents addition

--- a/3.md
+++ b/3.md
@@ -87,27 +87,28 @@
 
 ## 3.3 Equality between Strings and other Objects
 
-* When using `== on objects`, it `compares` the `reference `
-* Two newly declared Strings are never equal (two distinct objects)
-* Strings are immutable
+* When using `==` on objects, it *compares* the object *reference*;
+* Two newly declared Strings are never equal (two distinct objects);
+* Strings are immutable;
 
 ### String Pool
 
-* Java `only uses string pool for literal types` 
-* Strings created with the 'new' operator does `not` go to pool
-* when concatenating literal strings, the result string goes to the pool
-* the result from concatenating a literal string and a new string object does not go into the pool
-* the result from calling string methods are `new Strings`
-* the result from calling string methods are not aqquired from pool
-* when calling a method from a string resulting in the string itself, no new string is created
-* "`w`ord" and "`W`ord" are different, two Strings are added to the pool. 
+* Java **only uses string pool for literal types**;
+* Strings created with the `new` operator does **not** go to pool;
+* when concatenating literal strings, the result string goes to the pool;
+* the result from concatenating a literal string and a new string object does not go into the pool;
+* the result from calling string methods are **new Strings**;
+* the result from calling string methods are not aqquired from pool;
+* when calling a method from a string resulting in the string itself, no new string is created;
+* `"word"` and `"Word"` are different, two Strings are added to the pool;
 
 ### Equals
 
-* each Class has a `.equals` method that `can be overwritten`
-* new Integer(10) == new Integer(10) returns `false`
-* new Integer(10).equals(new Integer(10)) returns `true`
-* equals method must be public and receive an Object parameter
+* each Class has a `.equals()` method that *can be overwritten*;
+* new Integer(10) == new Integer(10) returns `false`;
+* new Integer(10).equals(new Integer(10)) returns `true`;
+* equals method must be public and receive an Object parameter;
+* equals method, by default, compares the object **content**;
 
 Exercises 
 
@@ -143,6 +144,7 @@ Exercises
 
 # 3.5 Using the Switch 
 
+* Switch allowed arguments are `int`, wrapper smaller than `Integer`, `String` or `Enum`.
 * The switch variable `must match` the argument type
 * When using an int argumento and a double value in the case: compile error
 * The compiler casts the value of the argument if the case type is compatible
@@ -160,3 +162,5 @@ Exercises
 4. 
 5. 
 6. 
+
+pg172
