Exercices from chapter 3

--- a/3.md
+++ b/3.md
@@ -3,7 +3,7 @@
 ## 3.1 USE JAVA'S OPERATORS
 
 * **attribution operator**, `=`, store a value to a variable;
-* `byte < int < long < float < double`;
+* `byte < short < int < long < float < double`;
 * `char` has the same size as `byte` but can't be negative;
 
 ### Reference and attribution
@@ -80,10 +80,37 @@
 * `double d = 0; float f = (float) d`;
 * Casting with primitive types can result on precision lost;
 
+### Exercises
+
+1. b
+2. b
+3. d
+4. d
+5. d
+6. Linha 2, 3 e 4
+7. b
+8. d
+9. e
+10. Não compila.
+11. c
+12. c
+13. a
+14. f
+15. c
+16. f
+17. b
+18. c
+19. a
+
 ## 3.2 USE PARENTHESES TO OVERRIDE OPERATORS PRECEDENCES
 
 * `int a = 15 * 4 + 1; // 15 * 4 = 60, 60 + 1 = 61`;
 * `int b = 15 * (4 + 1); // 4 + 1 = 5, 15 * 5 = 75`;
+
+### Exercises
+
+1. a
+2. b
 
 ## 3.3 Equality between Strings and other Objects
 
@@ -110,57 +137,57 @@
 * equals method must be public and receive an Object parameter;
 * equals method, by default, compares the object **content**;
 
-Exercises 
+### Exercises 
 
-1. 
-2. 
-3. 
-4. 
-5.  
+1. b
+2. d
+3. c
+4. e
+5. a
 
 ## 3.4 Utilizing If/Else Statement 
 
 ### if/else
 
-* It's all about `flux control`.
-* '=' for assignment and '==' for comparison, don't let yourself be fooled.
+* It's all about **flux control**.
+* `=` for assignment and `==` for comparison, don't let yourself be fooled.
 * assignments inside an if statement must return true or false, otherwise: compilation error
-* braces are `optional` given the conditional is `only one instruction long` 
+* braces are **optional** given the conditional is *only one instruction long* 
 * else is optional when nothing is to be executed in case the statement returns false
 * we must have a statement to execute after an ´if´
 * there is no elseif, for this, if's are placed inside elses, ex: else if 
 
 ## Unreachable Code and Missing return
 
-* methods that return something, may not return something with a condition that returns something when true but `lacks the else` statement
+* methods that return something, may not return something with a condition that returns something when true but **lacks the else** statement
 
 Exercises
 
-1. 
-2. 
-3. 
-4. 
-5. 
+1. c
+2. a
+3. a
+4. a
+5. b
 
 # 3.5 Using the Switch 
 
 * Switch allowed arguments are `int`, wrapper smaller than `Integer`, `String` or `Enum`.
-* The switch variable `must match` the argument type
+* The switch variable **must match** the argument type
 * When using an int argumento and a double value in the case: compile error
 * The compiler casts the value of the argument if the case type is compatible
 * A case can be a literal, a final variable with a litteral value or expressions envolving both
-* Simple variables `cannot be used` as cases: compile error
+* Simple variables **cannot be used** as cases: compile error
 * `null` is not a valid case
 * To be considered a valid final variable, it must be declared as its initialized: final int num = 5; 
-* The `default` case may appear in `any order`.
-* Breaks must be used between cases, otherwise there will be a `cascade execution` from the first matching case
+* The `default` case may appear in *any order*.
+* Breaks must be used between cases, otherwise there will be a *cascade execution* from the first matching case
  
 Exercises 
-1. 
-2. 
-3. 
-4. 
-5. 
-6. 
+1. d
+2. a
+3. b
+4. a
+5. a
+6. a
 
 pg172
