--- a/5.md
+++ b/5.md
@@ -18,12 +18,12 @@
 * you **can't modify** the collection values through the iterator
 * you **can't go through** two collections at once with **one iterator**
 
-## Do-while loops
+## 5.3 Do-while loops
 
 * the condition is tested only after the body is executed
 * there is a ';' after the condition : `do{ ... } while(1<10);`
 
-## Comparing loops
+## 5.4 Comparing loops
 
 * while and do while are very similar
 * the simple for is more powerful than the Enhanced for 
@@ -32,7 +32,7 @@
 * we usually use `for` when we know the ammount of times we want the loop to be executed
 * we use `while` and `do while` when we don't know the number of iterations 
 
-## Using Break and Continue
+## 5.5 Using Break and Continue
 
 * we can apply `break` and `continue` in any loop structure
 * `break` stops the loop completely 
@@ -41,7 +41,7 @@
 * loops with an endless loop and a break does compile, be careful. 
 * using continue in a for, do not skip to the condition before updating first 
 
-## labeled loops
+### labeled loops
 
 * You can create labeled statements
 * `example: `// label 
